# player

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  NEFFmpeg.cpp  NEFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp
app/src/main/java/com/chengjs/ndkdemo/: MainActivity.java  MyPlayer.java  NEPlayer.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
